<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_SCALE_CONF" Id="{8bc4c568-c897-4e5c-9502-80b6435a2b9e}">
    <Declaration><![CDATA[TYPE TYP_SCALE_CONF :
STRUCT
	InMin : REAL;
	InMax : REAL;
	OutMin : REAL;
	OutMax : REAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>